# SudokuApp

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.user.87ca503  shortcuts.txt
Gui/: CMakeLists.txt  cell.cpp  cell.h  countlabel.cpp  grid.cpp  grid.h  history.cpp  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  style.css  sudokuboard.cpp  sudokuimage.cpp  sudokumatrix.cpp  sudokuserializer.cpp  toggleswitch.cpp  toggleswitch.h  util.cpp  util.h
Gui/include/: cell.h  cellchange.h  countlabel.h  grid.h  history.h  mainwindow.h  sudokuboard.h  sudokuimage.h  sudokumatrix.h  sudokuserializer.h
backend/: pyproject.toml
backend/app/: main.py
backend/uploads/: a3d22110-150c-4945-aa68-08c0fe1a686b
reader/: CMakeLists.txt  imageprocessor.cpp  imageprocessor.h  sudokureader.cpp  sudokureader.h
reader/cmake/: FindTesseract.cmake
reader/include/: imageprocessor.h  sudokureader.h
solver/: CMakeLists.txt  DLXBuilder.cpp  DLXBuilder.h  solutionset.cpp  sudokusolver.cpp  sudokusolver.h
solver/include/: .clang-format  DLXBuilder.h  solutionset.h  sudokusolver.h
